# bevy-2d-template

./: Cargo.toml  README.md  cargo-generate.toml
.github/workflows/: rust.yml
src/: audio_channels.rs  lib.rs  main.rs
